# srukf

./: .clang-format  .editorconfig  .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  ENHANCEMENTS_SUMMARY.md  Makefile  QUICKSTART.md  README.md  conanfile.py  sr_ukf.c  sr_ukf.h  srukf.c  srukf.h  srukf.pc.in  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml
benchmark/: benchmark.c  generate_chart.py  generate_memory_chart.py  memory_bench.c
cmake/: srukfConfig.cmake.in
dev/bench/: data.js
docs/: Doxyfile  building-with-cmake.md  header.html  index.html  mkdocs.yml  vcpkg-port-guide.md
docs/src/: index.md
examples/: README.md  index.html
examples/01_pendulum/: Makefile  README.md  pendulum.c
examples/02_gps_imu_1d/: Makefile  README.md  gps_imu.c
examples/03_stability_test/: Makefile  README.md  stability.c
examples/common/: plot_utils.c  plot_utils.h
examples/web_explainer/: README.md  index.html  ukf-explainer.js
python/: .gitignore  MANIFEST.in  README.md  build_library.py  pyproject.toml  setup.py
python/examples/: pendulum.py  simple.py
python/examples/notebooks/: tutorial.ipynb
python/srukf/: __init__.py  _bindings.py  core.py  utils.py  version.py
python/tests/: test_basic.py  test_matrix.py  test_pendulum.py
tests/: 00_sigma.c  01_weights.c  02_weights.c  03_gain.c  04_mean_cov.c  05_correct.c  06_predict.c  10_simple.c  20_nonlinear.c  30_errors.c  35_numerical.c  40_stress.c  45_accessors.c  46_edge_cases.c  47_single_precision.c  test_helpers.h
